# XMPP-Chatbot

./: .gitignore  Chatbot.hs  Chatbot.hs~  Common.hs  Config.hs  Handlers.hs  Handlers.hs~  Logs.hs  README.md  Users.hs  XmlUtils.hs  stack.yaml  xmpp-chatbot.cabal
src/: Chatbot.hs  Common.hs  Config.hs  FixUsernames.hs  Handlers.hs  Instances.hs  Logs.hs  RollCommands.hs  Users.hs  XmlUtils.hs
