name:                xmpp-chatbot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/xmpp-chatbot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmpp-chatbot
  hs-source-dirs:      src
  main-is:             Chatbot.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base,
                       pontarius-xmpp,
                       text,
                       deepseq,
                       directory,
                       containers,
                       data-default,
                       hslogger,
                       tls,
                       lens,
                       xml-types,
                       filepath,
                       random,
                       attoparsec,
                       stm,
                       unix,
                       async
                        
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/xmpp-chatbot
